tests/stacks/openshift/application/istio-1-3-1-stack/test_data/expected/apiextensions.k8s.io_v1beta1_customresourcedefinition_instances.config.istio.io.yaml
apiVersion: apiextensions.k8s.io/v1beta1
kind: CustomResourceDefinition
metadata:
  labels:
    app: mixer
    istio: mixer-instance
    kustomize.component: istio-crds
    package: instance
  name: instances.config.istio.io
spec:
  group: config.istio.io
  names:
    categories:
    - istio-io
    - policy-istio-io
    kind: instance
    plural: instances
    singular: instance
  scope: Namespaced
  versions:
  - name: v1alpha2
    served: true
    storage: true
